--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,4 +1,14 @@
 {
   "name": "core",
-  "main": "src/index.ts"
+  "exports": {
+    "./buildin": "./src/builtin/index.ts",
+    "./notebooks": "./src/notebooks/index.ts",
+    "./notes": "./src/notes/index.ts",
+    "./icons": "./src/icons/index.ts"
+  },
+  "dependencies": {
+    "builtin": "workspace:*",
+    "@types/react": "^19.1.12",
+    "lucide": "^0.542.0"
+  }
 }
