--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -2,6 +2,8 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "baseUrl": ".",
+    "moduleResolution": "bundler", 
+    "module": "ESNext",
     "paths": {
       "@/*": ["src/*"]
     }
